# enance-amamento

./: .gitignore  CITATION.cff  LICENCE.md  Makefile  README.md  TODO.md  meson.build  meson.options
benchmarks/: meson.build
benchmarks/micro/: test-1.cpp
docs/: architecture.md  build.md  faq.md  offloaded-notes.md
docs/designing/: LOD.md  rendering-pipeline.md  scene-format.md  xml-format.md
examples/: sample-sdf.cpp  test-0.xml  test-1.xml
include/enamento/pipeline/: basic.hpp
include/enamento/sdf/: README.md  commons.hpp  sdf.hpp  serialize.hpp  tree.hpp
include/enamento/sdf/modifiers/: forward.hpp  lod.hpp
include/enamento/sdf/operators/: rotate.hpp  translate.hpp
include/enamento/sdf/operators/boolean/: cut.hpp  join.hpp  xor.hpp
include/enamento/sdf/primitives/: plane.hpp  sphere.hpp
include/enamento/sdf/special/: interpreted.hpp  octa-sampled-3d.hpp  optimized.hpp
include/enamento/utils/: texture.hpp
include/sdf/: README.md  commons.hpp  sdf.hpp  tree.hpp
include/sdf/modifiers/: forward.hpp
include/sdf/operators/: scale.hpp  translate.hpp
include/sdf/operators/boolean/: common.hpp
include/sdf/operators/s-boolean/: smooth-join.hpp
include/sdf/primitives/: box.hpp  box.xml  demo.hpp  sphere.hpp  zero.hpp
include/sdf/special/: dynlib.hpp  interpreted.hpp  material.hpp
include/solver/projection/: base.hpp
include/ui/panels/: details.hpp
src/app/: README.md  lua-script.cpp  lua-script.hpp  main.cpp  meson.build  xml.hpp
src/experiments/: comptime-render.cpp  meson.build  test-compile.cpp  test-constexpr.cpp  test-dist-compute.cpp  test-ui.cpp  xml-parser.cpp
src/gen-schemas/: README.md  helper.ts  main.cpp  meson.build
src/headless/: README.md  meson.build
src/headless-renderer/: README.md  meson.build  shared-slots.cpp
src/lib/: README.md  meson.build
src/lib/scene-import/: README.md  meson.build
src/lib/sdf/: README.md  meson.build  serialize.cpp
src/lib/stub/: README.md  meson.build  stdlib-stub.cpp
src/lib/ui/: meson.build  ui.cpp
src/lib/ui/imgui/: knobs.cpp  menu-pie.cpp  treeview.cpp
src/old/: README.md
subprojects/: args.wrap  glm.wrap  omp_stub.wrap  vs-templ.wrap  vs-xml.wrap
subprojects/openmp-stub/: meson.build  omp.c
subprojects/openmp-stub/include/: omp.h
tests/: meson.build  sdf.cpp
